# LearnOpenGL

./: .gitignore  README.md
LearnOpenGL/: CMakeLists.txt  main.cpp  shader.cpp  shader.hpp
LearnOpenGL.xcodeproj/: project.pbxproj
LearnOpenGL/include/assimp/: revision.h
LearnOpenGL/include/glad/: glad.h
LearnOpenGL/markdown/: 投光物.md  材质.md  模版测试.md  深度测试.md  混合.md
LearnOpenGL/resource/: fragcolor.frag  fragcolor_purecolor.frag  vertexcolor.vex
LearnOpenGL/src/: cameraSystem.hpp  main.cpp  model.h
LearnOpenGL_base/src/: shader.hpp
LearnOpenGL_光照/: CMakeLists.txt
LearnOpenGL_光照/include/: config.h
LearnOpenGL_光照/markdown/: 光照基础.md  光照贴图.md  多光源.md  颜色.md
LearnOpenGL_光照/resource/: lightVertexColor.vex  vertexcolor.vex
LearnOpenGL_光照/src/: cameraSystem.cpp  shader.cpp
LearnOpenGL_模型加载/markdown/: 模型加载.md  模型加载加光照.md
LearnOpenGL_模型加载/resource/: vertexcolor.vex
LearnOpenGL_模型加载/src/: model.cpp
LearnOpenGL_模型加载/src/glad/: glad.c
